# Gfx-Engine

./: .gitignore  Cargo.toml  Cross.toml  GEMINI.md  LICENSE  README.md  Screencast_20251025_011642.webm  Screencast_20251025_011642_2.webm  Screencast_20251025_014658_2.webm  Screencast_20251025_023828_2.webm  Screencast_20251025_025421_2.webm  Screencast_20251025_030458_2.webm  Screencast_20251026_223657_2.webm  Screencast_20251026_225429_2.webm  Screencast_20251026_235352_2.webm  Screencast_20251026_235935_2.webm  Screencast_20251026_235935_3.webm  config.toml  debug_log.txt
assets/: game_config.toml  game_config.toml_original  game_config.toml_test
assets/levels/: level1.toml  tileset_1_outside.tsx  world_1_level_1.tmx  world_1_level_2.tmx
assets/replays/: attract_mode.001.replay  attract_mode.replay
assets/sounds/: sfx_coin_01.flac  sfx_hit_01.flac  (+4 more)
docs/: Architecture.md  CodingStyle.md  Design.md  Design_ResolutionRefactor.md  Documentation.md  Home.md  MasterMerge.md  OnboardingReport.md  Product.md  ReleaseGuide.md  Requirements.md  Structure.md  Tasks.md  Tech.md  Testing.md  Workflow.md
examples/: generate_game_over_image.rs
local_bin/: rustup
src/: animation.rs  app.rs  audio.rs  audio_analysis.rs  benchmarker.rs  camera.rs  config.rs  entity_spawner.rs  font_manager.rs  frame_capture.rs  game_state.rs  game_state_manager.rs  input.rs  level.rs  lib.rs  main.rs  math.rs  menu.rs  physics.rs  player.rs  renderer.rs  replay.rs  state_machine.rs  texture_manager.rs
tests/: audio_logic_test.rs  integrity_test.rs  render_scale_test.rs
(+64 files in other folders)
