[package]
name = "gfx_engine"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
sdl3 = { version = "0.14.41", features = ["unsafe_textures"] }
sdl3-sys = "0.5.9"
libc = "0.2"
image = { version = "0.25.1", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
quick-xml = { version = "0.31.0", features = ["serialize"] }
kira = "0.8.0"
rand = "0.9.2"
rusttype = "0.9.3"
hound = "3.5.1"
rustfft = "6.4.1"
spectrum-analyzer = "1.7.0"


[features]
debug-player = []

[dev-dependencies]
image = "0.25.1"
imageproc = "0.25.0"





